--- a/index.html
+++ b/index.html
@@ -11,17 +11,10 @@ redirect_from: "/playlist/"
     <link rel="stylesheet" href="/playlist/assets/css/style.css?v=2bdfa683f5240acded42eef91ee7e947c2a976bf" media="screen">
     <link rel="stylesheet" href="/playlist/assets/css/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="/playlist/assets/css/non-screen.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelementplayer.min.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement-plugins/2.5.0/playlist/playlist.min.css"
-        media="handheld, only screen and (max-device-width:640px)">
-
     <script src="/playlist/assets/js/modernizr.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
         crossorigin="anonymous"></script>
     <script src="/playlist/assets/js/headsmart.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelement.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement-plugins/2.5.0/playlist/playlist.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.9/mediaelement-and-player.min.js"></script>
     <script>
         $(document).ready(function () {
             $('#main_content').headsmart()
@@ -68,24 +61,7 @@ redirect_from: "/playlist/"
         <span class="banner-fix"></span>
         <section id="main_content">
             <h2 id="welcome-to-fsoft-vof-playlist">Welcome to FSOFT VOF PLaylist</h2>
-            <audio class="main-playlist" data-showplaylist="true" width="400" height="260" controls="controls" preload="none">
-                <source src="http://sampleswap.org/mp3/artist/harvestfred/harvestfred_-PRIMAVARA--320.mp3" title="PRIMAVARA by harvestfred"
-                    data-poster="http://dummyimage.com/600x400/574c0d/e0e0e0&text=PRIMAVARA+by+harvestfred" type="audio/mpeg">
-                <source src="http://sampleswap.org/mp3/artist/fadortel/life-in-a-box_kalamata3-320.mp3" title="kalamata_3 by life in a box"
-                    data-poster="http://dummyimage.com/600x400/801a80/e0e0e0&text=kalamata_3 by life in a box" type="audio/mpeg">
-                <source src="http://sampleswap.org/mp3/artist/robbot/robert-meyers_The-Magnificient-Escap-320.mp3" title="The Magnificient Escape 2009 EDIT by robert meyers"
-                    data-poster="http://dummyimage.com/600x400/80601b/e0e0e0&text=The+Magnificient+Escape+2009+EDIT+by+robert+meyers"
-                    type="audio/mpeg">
-                <source src="http://sampleswap.org/mp3/artist/brettml/Seed-AI_2D-320.mp3" title="2D by Seed A.I." data-poster="http://dummyimage.com/600x400/1c1c80/e0e0e0&text=2D+by+Seed+A.I."
-                    type="audio/mpeg">
-                <source src="http://sampleswap.org/mp3/artist/Thrystero/Thrystero_Diagonal-320.mp3" title="Diagonal by Thrystero" data-poster="http://dummyimage.com/600x400/741c80/e0e0e0&text=Diagonal+by+Thrystero"
-                    type="audio/mpeg">
-                <source src="http://sampleswap.org/mp3/artist/Akcija/Akcija_Trip-To-Your-Liver-320.mp3" title="Trip To Your Liver by Akcija"
-                    data-poster="http://dummyimage.com/600x400/1c8028/e0e0e0&text=Trip+To+Your+Liver+by+Akcija" type="audio/mpeg">
-                <source src="http://sampleswap.org/mp3/artist/PaGaN/Alans-Lounge_No-More-Ballyhoo-320.mp3" title="No More Ballyhoo by Alans Lounge"
-                    data-poster="http://dummyimage.com/600x400/27570d/e0e0e0&text=o+More+Ballyhoo+by+Alans+Lounge" type="audio/mpeg">
-
-            </audio>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/588941136%3Fsecret_token%3Ds-8wufi&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </section>
         <footer>
             <span class="ribbon-outer">
@@ -95,7 +71,7 @@ redirect_from: "/playlist/"
                 <span class="left-tail"></span>
                 <span class="right-tail"></span>
             </span>
-            <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p> -->
+            <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
         </footer>
     </div>
