--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ redirect_from: "/playlist/"
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=640">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/playlist/assets/css/style.css?v=2bdfa683f5240acded42eef91ee7e947c2a976bf" media="screen">
     <link rel="stylesheet" href="/playlist/assets/css/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="/playlist/assets/css/non-screen.css" media="handheld, only screen and (max-device-width:640px)">
