--- a/index.html
+++ b/index.html
@@ -18,13 +18,7 @@ redirect_from: "/playlist/"
     <script src="/playlist/assets/js/headsmart.min.js"></script>
     <script>
         $(document).ready(function () {
-            $('#main_content').headsmart()
-            $('audio.main-playlist').mediaelementplayer({
-                "features": ['playlistfeature', 'prevtrack', 'playpause', 'nexttrack', 'loop', 'shuffle', 'current', 'progress', 'duration', 'volume', 'playlist'],
-                "audioVolume": "vertical",
-                "shuffle": false,
-                "loop": false
-            });
+            $('#main_content').headsmart();
         })
     </script>
     <!-- Begin Jekyll SEO tag v2.5.0 -->
@@ -43,7 +37,6 @@ redirect_from: "/playlist/"
 </head>
 
 <body>
-    <a id="forkme_banner" href="https://vof-fsoft.github.io/playlist/">Contact Us</a>
     <div class="shell">
         <header>
             <span class="ribbon-outer">
@@ -62,7 +55,7 @@ redirect_from: "/playlist/"
         <span class="banner-fix"></span>
         <section id="main_content">
             <h2 id="welcome-to-fsoft-vof-playlist">Welcome to FSOFT VOF PLaylist</h2>
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/588941136%3Fsecret_token%3Ds-8wufi&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/588941136%3Fsecret_token%3Ds-8wufi&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=true&visual=true"></iframe>
         </section>
         <footer>
             <span class="ribbon-outer">
