--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ redirect_from: "/playlist/"
         <header>
             <span class="ribbon-outer">
                 <span class="ribbon-inner">
-                    <h1>playlist</h1>
+                    <h1>VOF FPT SOFTWARE</h1>
                     <h2>Playlist for VOF of fsoft</h2>
                 </span>
                 <span class="left-tail"></span>
@@ -60,12 +60,12 @@ redirect_from: "/playlist/"
         <footer>
             <span class="ribbon-outer">
                 <span class="ribbon-inner">
-                    <p>this project by <a href="https://github.com/vof-fsoft">vof-fsoft</a> can be found on <a href="https://github.com/vof-fsoft/playlist">GitHub</a></p>
+                    <p>this project by <a href="https://vof-fsoft.github.io/playlist/">vof-fsoft</a> can be found on <a href="https://github.com/vof-fsoft/playlist">GitHub</a></p>
                 </span>
                 <span class="left-tail"></span>
                 <span class="right-tail"></span>
             </span>
-            <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+            <p>Generated with <a href="https://vof-fsoft.github.io/playlist/">GitHub Pages</a> using Merlot</p>
         <span class="octocat"></span>
         </footer>
     </div>
