--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@ redirect_from: "/playlist/"
     <link rel="stylesheet" href="/playlist/assets/css/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="/playlist/assets/css/non-screen.css" media="handheld, only screen and (max-device-width:640px)">
     <script src="/playlist/assets/js/modernizr.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
-        crossorigin="anonymous"></script>
     <script src="/playlist/assets/js/headsmart.min.js"></script>
     <script>
         $(document).ready(function () {
@@ -42,7 +40,7 @@ redirect_from: "/playlist/"
             <span class="ribbon-outer">
                 <span class="ribbon-inner">
                     <h1>VOF FPT SOFTWARE</h1>
-                    <h2>Playlist for VOF of fsoft</h2>
+                    <h2>Present for F-citizens</h2>
                 </span>
                 <span class="left-tail"></span>
                 <span class="right-tail"></span>
