--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
---- redirect_from: "/playlist/" ---
+--- 
+redirect_from: "/playlist/" 
+---
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -24,10 +26,10 @@
 {"headline":"Welcome to FSOFT VOF PLaylist","@type":"WebSite","url":"https://vof-fsoft.github.io/playlist/","name":"playlist","description":"Playlist for VOF of fsoft","@context":"http://schema.org"}</script>
     <!-- End Jekyll SEO tag -->
     <style>
-        div#no-downloads span.logo {
+        div#logo {
             z-index: 10;
             display: block;
-            position: relative;
+            position: absolute;
             height: 197px;
             width: 550px;
             background: transparent url(./fpt.png) 0 0 no-repeat;
@@ -47,8 +49,8 @@
                 <span class="right-tail"></span>
             </span>
         </header>
+        <div id="logo"></div>
         <div id="no-downloads">
-            <span class="logo"></span>
             <span class="inner">
             </span>
         </div>
