update style logo

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@ redirect_from: "/playlist/"
             z-index: 10;
             display: block;
             position: absolute;
-            height: 197px;
-            width: 550px;
+            height: 150px;
+            width: 700px;
             background: transparent url(./fpt.png) 0 0 no-repeat;
+            background-size: 200px 130px;
+            background-position: center;
         }
     </style>
 </head>
