Add link send request

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ redirect_from: "/playlist/"
         <footer>
             <span class="ribbon-outer">
                 <span class="ribbon-inner">
-                    <p>this project by <a href="https://vof-fsoft.github.io/playlist/">vof-fsoft</a> can be found on <a href="https://vof-fsoft.github.io/playlist/">GitHub</a></p>
+                    <p>To send music gift <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=CpMe8C61sUK3D6iIK10EO7kCjxFYSNZPtOP2ZwXC6kRURUlPRTBPUkYyTzZCUkNROU9IQk9WVlpSTC4u">CLICK HERE</a> </p>
                 </span>
                 <span class="left-tail"></span>
                 <span class="right-tail"></span>
