Add target blank

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ redirect_from: "/playlist/"
                 <span class="left-tail"></span>
                 <span class="right-tail"></span>
             </span>
-            <p>Generated with <a href="https://vof-fsoft.github.io/playlist/">GitHub Pages</a> using Merlot</p>
+            <p>Generated with <a target="_blank" href="https://vof-fsoft.github.io/playlist/">GitHub Pages</a> using Merlot</p>
             <span class="octocat"></span>
         </footer>
     </div>
