--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://vof-fsoft.github.io/" />
     <meta property="og:site_name" content="playlist" />
     <script type="application/ld+json">
-{"headline":"Welcome to FSOFT VOF PLaylist","@type":"WebSite","url":"https://vof-fsoft.github.io/","name":"playlist","description":"Playlist for VOF of fsoft","@context":"http://schema.org"}</script>
+{"headline":"Welcome to FSOFT VOF PLaylist","@type":"WebSite","url":"https://vof-fsoft.github.io/","name":"vof-fsoft.github.io","description":"Playlist for VOF of fsoft","@context":"http://schema.org"}</script>
     <!-- End Jekyll SEO tag -->
     <style>
         div#logo {
